Agrego rama develop

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </sectionc>
             </main>
 
-
+                <!-- <p>probando si funciona el github</p> -->
 
             <footer class="footer"> <!--PIE DE PÁGINA-->
                 <div class="footer-div">
