Arreglé el scroll de la imagen del index y además agregué transitions en la sección de productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,27 +37,27 @@
             <h1 class="encabezados-secundarios">Amigurumis</h1>
             <section class="section-productos">
                     <div class="imgs-productos">
-                        <img src="../images/ovejita.png" alt="Ovejita">
-                        <img src="../images/ranita.png" alt="Ranita">
-                        <img src="../images/patri.png" alt="Patricio">
-                        <img src="../images/conejito-negro (1).png" alt="Conejito">
-                        <img src="../images/avioncito.png" alt="Avioncito">
-                        <img src="../images/carita.png" alt="Carita">
-                        <img src="../images/dragoncito.png" alt="Dragoncito">
-                        <img src="../images/zorrito (1).png" alt="zorrito">
-                        <img src="../images/Halloween.png" alt="Halloween">
-                        <img src="../images/patito.png" alt="patito">
+                        <img class="hover-img-productos" src="../images/ovejita.png" alt="Ovejita">
+                        <img class="hover-img-productos" src="../images/ranita.png" alt="Ranita">
+                        <img class="hover-img-productos" src="../images/patri.png" alt="Patricio">
+                        <img class="hover-img-productos" src="../images/conejito-negro (1).png" alt="Conejito">
+                        <img class="hover-img-productos" src="../images/avioncito.png" alt="Avioncito">
+                        <img class="hover-img-productos" src="../images/carita.png" alt="Carita">
+                        <img class="hover-img-productos" src="../images/dragoncito.png" alt="Dragoncito">
+                        <img class="hover-img-productos" src="../images/zorrito (1).png" alt="zorrito">
+                        <img class="hover-img-productos" src="../images/Halloween.png" alt="Halloween">
+                        <img class="hover-img-productos" src="../images/patito.png" alt="patito">
                     </div>
             </section>
 
             <h2 class="encabezados-secundarios">Macramé</h2>
             <section class="section-productos">
                 <div class="imgs-productos">
-                    <img src="../images/macrame-1.png" alt="primera">
-                    <img src="../images/macrame-2.png" alt="segunda">
-                    <img src="../images/macrame-3.png" alt="tercera">
-                    <img src="../images/macrame-4.png" alt="cuarta">
-                    <img src="../images/macrame-6.png" alt="sexta">
+                    <img class="hover-img-productos" src="../images/macrame-1.png" alt="primera">
+                    <img class="hover-img-productos" src="../images/macrame-2.png" alt="segunda">
+                    <img class="hover-img-productos" src="../images/macrame-3.png" alt="tercera">
+                    <img class="hover-img-productos" src="../images/macrame-4.png" alt="cuarta">
+                    <img class="hover-img-productos" src="../images/macrame-6.png" alt="sexta">
                 </div>
             </section>
         </main>
