Dividí mis secciones en diferentes .scss, agregué una animación que aún falta adpatar porque se ve rara

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 
                 <section class="section-index-2">
                     <h1 class="encabezados-primarios">¡Hola!</h1>
+                    <div>
+                        <img src="images/jirafita.png" alt="jirafita">
+                    </div>
                     <p class="parrafo-index">Me llamo Silvana y realizo de forma artesanal <span class="span-textos">amigurumis, macramé, crochet, mantitas, sonajeros</span> y otros objetos de diseño a pedido. 
                     En esta página, estoy segura, vas a encontrar lo que buscás. <span class="span-textos">¡Adelante!</span>
                     </p>
