--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="macramé, amigurumis, Silvana Lapunzina, Julián Lapunzina, regalos, home-made, mantitas, sonajeros, crochet, artesanías, arte, index">
+
+    <!-- Meta Description -->
+    <meta name="description" content="Soy Silvana Lapunzina, me dedico a hacer amigurumis y objetos de macramé, crochet, mantitas, sonajeros, para regalos, todos los productos son artesanales y sólo trabajo por pedidos/encargos, sección principal de mi página donde podes encontrar todo el contenido que te interesa">
+
     <!-- LINK A BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
+
+    <!-- Link de Favicon -->
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x 16.png">
+    <link rel="icon" href="/favicon/favicon.ico"> -->
+
     <!-- Link a Mi CSS -->
     <link rel="stylesheet" href="CSS/main.css">
 
@@ -18,24 +30,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap" rel="stylesheet">
 
     <!-- Título de la Página -->
-    <title>Alita Amigurumis</title>
+    <title> Alita Amigurumis | Home </title>
+
 </head>
-    <!-- BODY -->
-        <body id="body">
-            <header class="header">
-            <!-- NAVEGACIÓN -->
-            <nav class="navbar navbar-expand-lg navbar-light">
+                                    <!-- BODY -->
+    <body id="body">
+        <header class="header">
+                                <!-- NAVEGACIÓN -->
+        <nav class="navbar navbar-expand-lg navbar-light">
 
             <div class="container-fluid">
-                    <!-- LOGO -->
+
+                                <!-- LOGO -->
                 <img class="logo navbar-brand" src="images/logo-sinfondo.png" alt="logo">
 
-                    <!-- BOTON HAMBURGUESA -->
+                            <!-- BOTON HAMBURGUESA -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <!-- LISTA DEL NAV -->
+
+                            <!-- LISTA DEL NAV -->
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
@@ -60,10 +75,10 @@
 
                 </ul>
             </div>
-        </div>
-    </nav>
-            </header>
-
+            </div>
+        </nav>
+        </header>
+                            <!------ MAIN-------->
             <main id="main">
                 <section class="section-index-1">                        
                     <section class="section-index-4 carrousel">
@@ -124,7 +139,8 @@
                 </section>
             </main>
 
-            <footer class="footer"> <!--PIE DE PÁGINA-->
+                                    <!--PIE DE PÁGINA-->
+            <footer class="footer"> 
                 <div class="footer-div">
                     <div class="footer-iconos">
                         <a href="https://www.instagram.com/alita.amigurumis/?hl=es"target="_blank"><img src="images/logo-instagram.png" alt="logo-instagram"></a>
@@ -137,5 +153,6 @@
 
             <!-- Link a JS de BOOTSRAP -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
         </body>
 </html>
