Trabajo día 31/5 - reestructuración y corrección

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,7 +34,7 @@
 
             <div class="container-fluid">
                     <!-- LOGO -->
-                <img class="logo navbar-brand" src="../images/logo-sinfondo.png" alt="logo">
+                    <a href="../index.html"><img class="logo navbar-brand" src="../images/logo-sinfondo.png" alt="logo"></a>
 
                     <!-- BOTON HAMBURGUESA -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
