--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -36,7 +36,7 @@
 
             <div class="container-fluid">
                     <!-- LOGO -->
-                <img class="logo navbar-brand" src="../images/logo-sinfondo.png" alt="logo">
+                    <a href="../index.html"><img class="logo navbar-brand" src="../images/logo-sinfondo.png" alt="logo"></a>
 
                     <!-- BOTON HAMBURGUESA -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
 
         <main class="main-bio">
             <h1 class="encabezados-primarios">Sobre mí</h1>
-            <section>
+            <section class="section-1-bio">
                     <p class="parrafo-bio">Mi nombre es Silvana, nací en Posadas-Misiones hace 34 años, pero hace ya 17 que vivo en Córdoba Capital. Estudié profesorado de Teatro en la Universidad de Córdoba.
 
                     Las manualidades siempre fueron mi pasión.
@@ -95,8 +95,8 @@
                     <h2 class="subtitulos"> Mis Tesoros </h2>
 
                     <div class="imgs-bio">
-                            <img class="img-bio-1" src="../images/Fran.jpeg" alt="Fran">
-                            <img class="img-bio-2" src="../images/Valen.jpeg" alt="Valen">
+                            <img class="img-bio-1" src="../images/Fran-prueba.jpg" alt="Fran">
+                            <img class="img-bio-2" src="../images/Valen-prueba.jpg" alt="Valen">
                     </div>
             </section>
         </main>
