--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-        <!-- HEAD -->
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+                                    <!------ HEAD -------->
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
 
     <!-- Meta Keywords -->
     <meta name="keywords" content="macramé, amigurumis, Silvana Lapunzina, Julián Lapunzina, regalos, home-made, mantitas, sonajeros, crochet, artesanías, arte, index">
@@ -12,36 +12,36 @@
     <!-- Meta Description -->
     <meta name="description" content="Soy Silvana Lapunzina, me dedico a hacer amigurumis y objetos de macramé, crochet, mantitas, sonajeros, para regalos, todos los productos son artesanales y sólo trabajo por pedidos/encargos, contactate conmigo a través de mis redes ">
 
-    <!-- LINK A BOOTSTRAP -->
+    <!-- BOOTSTRAP CSS LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Link a mi CSS -->
+    <!-- Link to my CSS -->
     <link rel="stylesheet" href="../CSS/main.css">
 
-    <!-- Fuentes de Google -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap" rel="stylesheet">
 
-    <!-- Título de mi página -->
+    <!-- Title Page -->
     <title> Alita Amigurumis | Contacto </title>
-
 </head>    
-    <body id="body"> <!--BODY-->
+                                    <!--------BODY------->
+    <body id="body">                
         <header class="header">
-            <!-- NAVEGACIÓN -->
+                                    <!-------- NAV ----------->
             <nav class="navbar navbar-expand-lg navbar-light">
 
             <div class="container-fluid">
-                    <!-- LOGO -->
+                                    <!----- LOGO ------>
                     <a href="../index.html"><img class="logo navbar-brand" src="../images/logo-sinfondo.png" alt="logo"></a>
 
-                    <!-- BOTON HAMBURGUESA -->
+                                    <!----- Hamburguer Button ----------->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <!-- LISTA DEL NAV -->
+                                    <!-------- Nav List ------->
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
@@ -69,13 +69,13 @@
         </div>
     </nav>
             </header>
-
-        <main> <!--CONTENDIDO-->
+                                    <!------- CONTENT -------->
+        <main> 
             <h1 class="encabezados-primarios">Contacto</h1>
             
             <section class="section-contacto align-items-center">
 
-                    <!-- Formulario Bootstrap -->
+                    <!-------------- Bootstrap Form - Grid Columns ---------->
 
                 <form class="row g-0 justify-content-center">
                     <div class="col-md-4 text-center">
@@ -126,7 +126,7 @@
 
             <section class="section-contacto-mapa">
 
-                    <!-- Mapita -->
+                                    <!------- Maps ---------->
 
                 <div class="d-flex justify-content-center">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d217954.2534022472!2d-64.33442911558893!3d-31.399377044309926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432985f478f5b69%3A0xb0a24f9a5366b092!2zQ8OzcmRvYmE!5e0!3m2!1ses-419!2sar!4v1652103915516!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -157,8 +157,8 @@
                 </form>
             </section>
         </main>
-        
-        <footer class="footer"> <!--PIE DE PÁGINA-->
+                                    <!-------Footer------->
+        <footer class="footer"> 
             <div class="footer-div">
                 <div class="footer-iconos">
                     <a href="https://www.instagram.com/alita.amigurumis/?hl=es"target="_blank"><img src="../images/logo-instagram.png" alt="logo-instagram"></a>
@@ -169,7 +169,7 @@
             </div>
         </footer>
 
-        <!-- Link a JS de BOOTSRAP -->
+        <!----- BOOTSTRAP JS LINK ------->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
