--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -9,6 +9,8 @@
     <!-- Meta Keywords -->
     <meta name="keywords" content="macramé, amigurumis, Silvana Lapunzina, Julián Lapunzina, regalos, home-made, mantitas, sonajeros, crochet, artesanías, arte, index">
 
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="../images/favicon-32x32.png">
 
     <!-- Meta Description -->
     <meta name="description" content="Soy Silvana Lapunzina, me dedico a hacer amigurumis y objetos de macramé, crochet, mantitas, sonajeros, para regalos, todos los productos son artesanales y sólo trabajo por pedidos/encargos, en esta sección podes encontrar novedades relacionadas a mi producción ">
@@ -78,21 +80,14 @@
         <main>
             <h1 class="encabezados-primarios">Novedades</h1>
             <section class="section-novedades">       
+                <div class="d-flex flex-column">
+                    <iframe class= "iframes" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D112838160864605%26id%3D104896401658781&show_text=true&width=500" width="100%" height="687" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                <div>
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D112838160864605%26id%3D104896401658781&show_text=true&width=500" width="500" height="687" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                </div>
+                    <iframe class= "iframes" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D111119004369854%26id%3D104896401658781&show_text=true&width=500" width="100%" height="725" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                <div>
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D111119004369854%26id%3D104896401658781&show_text=true&width=500" width="500" height="725" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                </div>
+                    <iframe class= "iframes" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D107620144719740%26id%3D104896401658781&show_text=true&width=500" width="100%" height="687" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
-                <div>
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D107620144719740%26id%3D104896401658781&show_text=true&width=500" width="500" height="687" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                </div>
-
-                <div>
-                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D104896664992088%26id%3D104896401658781&show_text=true&width=500" width="500" height="667" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                    <iframe class="iframes" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D104896664992088%26id%3D104896401658781&show_text=true&width=500" width="100%" height="667" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 </div>
             </section>
         </main>
