--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,6 +9,9 @@
     <!-- Meta Keywords -->
     <meta name="keywords" content="macramé, amigurumis, Silvana Lapunzina, Julián Lapunzina, regalos, home-made, mantitas, sonajeros, crochet, artesanías, arte, index">
 
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="../images/favicon-32x32.png">
+
     <!-- Meta Description -->
     <meta name="description" content="Soy Silvana Lapunzina, me dedico a hacer amigurumis y objetos de macramé, crochet, mantitas, sonajeros, para regalos, todos los productos son artesanales y sólo trabajo por pedidos/encargos, en esta sección podes ver varios de mis productos ">
 
@@ -78,56 +81,54 @@
             <h1 class="encabezados-secundarios">Amigurumis</h1>
             <section class="section-productos-1">
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-1.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CKzT5o-H8yJ/" target="_blank"><img class="gallery__img" src="../images/galeria-1.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-2.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CNLCxVermhW/" target="_blank"><img class="gallery__img" src="../images/galeria-2.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-3.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/COgWTT5Lk0u/" target="_blank"><img class="gallery__img" src="../images/galeria-3.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-4.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CPRQsPFLtFJ/" target="_blank"><img class="gallery__img" src="../images/galeria-4.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-5.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CTj4ibqr9Og/" target="_blank"><img class="gallery__img" src="../images/galeria-5.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-6.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CPEOyt0LxKp/" target="_blank"><img class="gallery__img" src="../images/galeria-6.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-8.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CXZOkyfuW5k/" target="_blank"><img class="gallery__img" src="../images/galeria-8.jpeg" alt=""></a>
                         </div>
                         <div class="gallery__item">
-                            <img class="gallery__img" src="../images/galeria-9.jpeg" alt="">
+                            <a href="https://www.instagram.com/p/CTIVJqvL8gW/" target="_blank"><img class="gallery__img" src="../images/galeria-9.jpeg" alt=""></a>
                         </div>
                     </div>
             </section> 
 
-            <!-- <h2 class="encabezados-secundarios">Macramé</h2>
+            <h2 class="encabezados-secundarios">Macramé</h2>
             <section class="section-productos-2">
-                <div class="imgs-productos">
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-1.png" alt="">
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-1-galeria.jpeg" alt=""></a>
                     </div>
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-2.png" alt="">
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-2-galeria.jpeg" alt=""></a>
                     </div>
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-3.png" alt="">
-                    </div><img class="hover-img-productos" src="../images/macrame-1.png" alt="primera">
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-4.png" alt="">
-                    </div><img class="hover-img-productos" src="../images/macrame-2.png" alt="segunda">
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-5.png" alt="">
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-3-galeria.jpeg" alt=""></a>
                     </div>
-                    <div class="gallery__item">
-                        <img class="gallery__img" src="../images/macrame-6.png" alt="">
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-4-galeria.jpeg" alt=""></a>
                     </div>
-                </div>
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-5-galeria.jpeg" alt=""></a>
+                    </div>
+                    <div class="gallery__item-2">
+                        <a href="https://www.instagram.com/stories/highlights/17883183461360750/" target="_blank"><img class="gallery__img-2" src="../images/macrame-6-galeria.jpeg" alt=""></a>
+                    </div>
             </section>
-        </main> -->
+        </main>
         
                                     <!------- Footer --------->
         <footer class="footer"> 
