--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Favicon Link -->
-    <link rel="icon" type="image/png" href="./images/favicon.ico">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png">
 
     <!-- Link to my CSS -->
     <link rel="stylesheet" href="CSS/main.css">
@@ -85,9 +85,6 @@
 
                 <section class="section-index-2">
                     <h1 class="encabezados-primarios animate__animated animate__rubberBand">¡Hola!</h1>
-                    <div>
-                        <img class="shake-slow shake-constant shake-constant--hover" src="images/jirafita.png" alt="jirafita" >
-                    </div>
                     <p class="parrafo-index animate__animated animate__rubberBand">Me llamo Silvana y realizo de forma artesanal <span class="span-textos">amigurumis, macramé, crochet, mantitas, sonajeros</span> y otros objetos de diseño a pedido. 
                     En esta página, estoy segura, vas a encontrar lo que buscás. <span class="span-textos">¡Adelante!</span>
                     </p>
