--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -12,6 +12,8 @@
     <!-- Meta Description -->
     <meta name="description" content="Soy Silvana Lapunzina, me dedico a hacer amigurumis y objetos de macramé, crochet, mantitas, sonajeros, para regalos, todos los productos son artesanales y sólo trabajo por pedidos/encargos, en esta sección podes conocer más sobre mí y mi trabajo ">
 
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="../images/favicon-32x32.png">
     
     <!-- BOOTSTRAP CSS LINK -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -79,25 +81,25 @@
         <main class="main-bio">
             <h1 class="encabezados-primarios">Sobre mí</h1>
             <section class="section-1-bio">
-                    <p class="parrafo-bio">Mi nombre es Silvana, nací en Posadas-Misiones hace 34 años, pero hace ya 17 que vivo en Córdoba Capital. Estudié profesorado de Teatro en la Universidad de Córdoba.
+                    <em><p class="parrafo-bio">Mi nombre es Silvana, nací en Posadas-Misiones hace 34 años, pero hace ya 17 que vivo en Córdoba Capital. Estudié profesorado de Teatro en la Universidad de Córdoba.
 
                     Las manualidades siempre fueron mi pasión.
 
-                    En 2015, quedé embarazada después de 5 años de búsqueda. Quise hacerle un regalo a mi hija que estuviera hecho con mis manos y se me ocurrió tejer. Pero no sabía tejer, ni tampoco qué. Jamás había agarrado una aguja. De manera autodidacta aprendí con videos de youtube, y lo primero que tejí fue una jirafa a quien 2 años después, Fran le pondría de nombre <span>"Alita"</span>. Allí nace este mundo para mí.
+                    En 2015, quedé embarazada después de 5 años de búsqueda. Quise hacerle un regalo a mi hija que estuviera hecho con mis manos y se me ocurrió tejer. Pero no sabía tejer, ni tampoco qué: jamás había agarrado una aguja. De manera autodidacta aprendí con videos de youtube, y lo primero que tejí fue una jirafa a quien 2 años después, Fran le pondría de nombre <span>"Alita"</span>. Allí nace este mundo para mí.
 
                     Alita es el reflejo de lo que siempre quise ser: madre, artista, y hoy, con 2 hijos: emprendedora. 
-                    Hace 6 años tejo amigurumis y este último incursioné en el macramé.Como persona ansiosa que soy, tejer es mi terapia. Y el proceso creativo es mi mejor momento. 
+                    Hace 6 años tejo amigurumis y este último incursioné en el macramé. Como persona ansiosa que soy, tejer es mi terapia. Y el proceso creativo es mi mejor momento. 
 
                     Lo hermoso de lo artesanal es que jamás una pieza será igual a otra. Pero todas tienen el amor, dedicación y los detalles del sello Alita.
-                    </p>
+                    </p></em>
             </section>
 
             <section class="section-2-bio">
                     <h2 class="subtitulos"> Mis Tesoros </h2>
 
                     <div class="imgs-bio">
-                            <img class="img-bio-1" src="../images/Fran-prueba.jpg" alt="Fran">
-                            <img class="img-bio-2" src="../images/Valen-prueba.jpg" alt="Valen">
+                            <img class="img-bio-1" src="../images/Fran.jpeg" alt="Fran">
+                            <img class="img-bio-2" src="../images/Valen.jpeg" alt="Valen">
                     </div>
             </section>
         </main>
@@ -105,9 +107,7 @@
         <footer class="footer"> 
             <div class="footer-div">
                 <div class="footer-iconos">
-                    <a href="https://www.instagram.com/alita.amigurumis/?hl=es"target="_blank"><img src="../images/logo-instagram.png" alt="logo-instagram"></a>
-                </div>
-                <div>    
+                    <a href="https://www.instagram.com/alita.amigurumis/?hl=es"target="_blank"><img src="../images/logo-instagram.png" alt="logo-instagram"></a> 
                     <a href="https://www.facebook.com/alitaamigurumis-104896401658781/?ref=page_internal"target="_blank"><img src="../images/logo-facebook.png" alt="logo-facebook"></a>
                 </div>
 
